--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="footer-copy">
                         Copyrights © 2018 ACICTS.<br/>All Rights Reserved.
+                        <!--This website was designed by Supun Tharinda-->
                     </div>
                 </div>
             </div>
@@ -506,5 +507,5 @@
     <script src="assets/js/custom.js"></script>
 
 </body>
-
+<!--This website was designed by Supun Tharinda-->
 </html>
