--- a/index.html
+++ b/index.html
@@ -437,11 +437,11 @@
                 <div class="col-lg-4 col-sm-8 col-md-8">
                     <div class="footer-widget footer-link">
                         <h4>We are here</h4>
-                        <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                        <iframe width="80%" height="250" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0"
                             src="https://www.openstreetmap.org/export/embed.html?bbox=79.8686394095421%2C6.923657699796083%2C79.87054109573366%2C6.925218009772558&amp;layer=mapnik&amp;marker=6.924437855429368%2C79.86959159374237"
-                            style="border: 1px solid black"></iframe><br /><small><a
-                                href="https://www.openstreetmap.org/?mlat=6.92444&amp;mlon=79.86959#map=19/6.92444/79.86959">View
-                                Larger Map</a></small>
+                            style="border: 1px solid black"></iframe>
+                            <br /><small><a
+                                href="https://www.openstreetmap.org/?mlat=6.92444&amp;mlon=79.86959#map=19/6.92444/79.86959">View the larger map...</a></small>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6">
@@ -480,7 +480,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="footer-copy">
-                        Copyrights © 2018 ACICTS.<br/>All Rights Reserved.
+                        Copyrights © 2019 ACICTS.<br/>All Rights Reserved.
                         <!--This website was designed by Supun Tharinda-->
                     </div>
                 </div>
