--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
                 <div class="col-lg-12 col-sm-12 m-auto">
                     <div class="section-heading">
                         <h4 class="section-title">Achievements</h4>
+                        <p>Ananda College ICT Society has won many achievements in the course of its history. Some of
+                            the recent ones are down below.</p>
                     </div>
                 </div>
             </div>
