--- a/index.html
+++ b/index.html
@@ -109,17 +109,6 @@
     <!--  ABOUT AREA END  -->
 
     <!--  SERVICE PARTNER START  -->
-    <section id="service-head" class="bg-feature">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-sm-12 m-auto">
-                    <div class="section-heading text-white">
-                        <h4 class="section-title">Our Projects</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <!--  SERVICE PARTNER END  -->
 
     <!--  SERVICE AREA START  -->
@@ -127,6 +116,11 @@
             <div class="overlay dark-overlay"></div>
         <div class="container">
             <div class="row">
+                            <div class="col-lg-12 col-sm-12 m-auto">
+                                <div class="section-heading">
+                                    <h4 class="section-title">Our Projects</h4>
+                                </div>
+                            </div>
                 <div class="col-lg-4 col-sm-6 col-md-6">
                     <div class="service-box">
                         <div class="service-img-icon">
